--- a/activity1/css/style.css
+++ b/activity1/css/style.css
@@ -11,10 +11,9 @@ header {
 }
 
 .main {
-    width: 600px;
-    margin: 0 auto;
+    width: auto;
+    margin: auto;
     background-color: #00ffffc4;
-    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -26,14 +25,14 @@ header {
 #quote {
     border-radius: 25px;
     background: rgb(0, 194, 253);
-    padding: 20px; 
+    padding: 15px; 
     width: fit-content;
     height: fit-content;
     font-style: italic;
 }
 
 input[type="text"], input[type="number"], textarea {
-    width: 100%;
+    width: auto;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -46,8 +45,8 @@ input[type="file"] {
 }
 
 #daily-image img {
-    max-width: 40%;
-    max-height: 40%;
+    width: 50%;
+    height: 50%;
     margin-top: 10px;
 }
 
@@ -68,4 +67,19 @@ button {
 
 button:hover {
     background-color: #4cae4c;
+}
+
+.column-left {
+    float: left;
+    width: 25%;
+   }
+   
+.column-mid {
+    float: left;
+    width: 50%;
+}
+
+.column-right {
+    float: left;
+    width: 25%;
 }
