--- a/vite-project/src/app.css
+++ b/vite-project/src/app.css
@@ -41,8 +41,6 @@ h1 {
 
 #app {
   width: 100%;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -63,6 +61,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+* {
+  box-sizing: border-box; /* Apply this universally */
 }
 
 @media (prefers-color-scheme: light) {
